--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# Ergebnisordner & generierte Dateien des Ziffernprojekts
+Projektarbeit_Output_Bilder/
+mnist_bsp_*/
+falsch_klassifiziert*/
+heatmap_fehler*/
+gewichte*/
+confusion_heatmap*/
+*.npz
+*.csv
+*.png
+*.jpg
+*.jpeg
+Projektbericht.txt
